# buildspy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
buildspy/: Cargo.toml  build.rs
buildspy-common/: Cargo.toml
buildspy-common/src/: lib.rs
buildspy-ebpf/: Cargo.toml  rust-toolchain.toml
buildspy-ebpf/.cargo/: config.toml
buildspy-ebpf/src/: main.rs
buildspy/src/: main.rs  proc_info.rs
buildspy/src/analysis/: cyclonedx.rs  filter.rs  identity.rs  mod.rs  report.rs
buildspy/src/backends/: mod.rs
buildspy/src/backends/ebpf/: mod.rs
buildspy/src/backends/ptrace/: diagnostics.rs  mem.rs  seccomp.rs
buildspy/src/ecosystem/: cargo.rs  golang.rs  mod.rs  npm.rs  python.rs
docs/: architecture.md  design-decisions.md
ebpf-component-tracer/: Cargo.toml  build.rs
ebpf-component-tracer-common/: Cargo.toml
ebpf-component-tracer-common/src/: lib.rs
ebpf-component-tracer-ebpf/: Cargo.toml
ebpf-component-tracer-ebpf/src/: main.rs
ebpf-component-tracer/src/: cyclonedx.rs  ebpf.rs  identity.rs  main.rs  proc_watcher.rs  report.rs  resolver.rs
ebpf-component-tracer/src/analysis/: cyclonedx.rs  identity.rs  mod.rs  report.rs  resolver.rs
ebpf-component-tracer/src/backends/: ebpf.rs  mod.rs  proc_watcher.rs  ptrace.rs
ebpf-component-tracer/src/backends/ebpf/: mod.rs
ebpf-component-tracer/src/backends/ptrace/: mod.rs
ebpf-component-tracer/src/ecosystem/: cargo.rs  npm.rs  python.rs
