[workspace]
members = [
    "buildspy",
    "buildspy-common",
    # The eBPF crate must be a workspace member so aya-build can find it via
    # `cargo build --package`.  It is excluded from the default build so that
    # plain `cargo build` at the workspace root does NOT try to compile it for
    # the host target (it targets bpfel-unknown-none and is compiled by
    # buildspy's build.rs instead).
    "buildspy-ebpf",
]
default-members = [
    "buildspy",
    "buildspy-common",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "Apache-2.0"
authors    = ["Danil Valetov"]
repository = "https://github.com/vltvdnl/buildspy"

[profile.dev]
opt-level = 1

[profile.release]
opt-level        = 3
lto              = true
strip            = true
codegen-units    = 1
panic            = "abort"
